force-app/main/default/objects/IOM_Synchronization_Item__c/IOM_Synchronization_Item__c.object-meta.xml
<CustomObject>
    <description>IOM Synchronization Item processed like Account,Contact,Opportunity &amp; Quote</description>
    <label>IOM Synchronization Item</label>
    <nameField>
        <displayFormat>IOM-SI-{0000}</displayFormat>
        <label>IOM Synchronization Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IOM Synchronization Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>