force-app/main/default/objects/IOM_Synchronization_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>IOM Account ID</description>
    <label>Account (New)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>