force-app/main/default/objects/IOM_Synchronization_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>IOM Contact Id</description>
    <label>Contact (New)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>