force-app/main/default/objects/IOM_Synchronization_Item__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error Message</description>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>