force-app/main/default/objects/IOM_Synchronization_Item__c/fields/IOM_Synchronization_Transaction__c.field-meta.xml
<CustomField>
    <fullName>IOM_Synchronization_Transaction__c</fullName>
    <description>IOM Synchronization Transaction</description>
    <label>IOM Synchronization Transaction</label>
    <referenceTo>IOM_Synchronization_Transaction__c</referenceTo>
    <relationshipLabel>IOM Synchronization Items</relationshipLabel>
    <relationshipName>IOM_Synchronization_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>