force-app/main/default/objects/IOM_Synchronization_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>IOM Opportunity Id</description>
    <label>Opportunity (New)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>