force-app/main/default/objects/IOM_Synchronization_Item__c/fields/Opportunity_Line_Item_JSON__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_JSON__c</fullName>
    <description>IOM Opportunity Line Items JSON</description>
    <label>Opportunity Line Item JSON (New)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>