force-app/main/default/objects/IOM_Synchronization_Item__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>IOM Quote Id</description>
    <label>Quote (New)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>