force-app/main/default/objects/IOM_Synchronization_Item__c/fields/Quote_Line_Item_JSON__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_JSON__c</fullName>
    <description>IOM Quote Line Item JSON</description>
    <label>Quote Line Item JSON (New)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>