force-app/main/default/objects/IOM_Synchronization_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Insert</fullName>
            </value>
            <value>
                <fullName>Account Update</fullName>
            </value>
            <value>
                <fullName>Contact Insert</fullName>
            </value>
            <value>
                <fullName>Contact Update</fullName>
            </value>
            <value>
                <fullName>Opportunity Insert</fullName>
            </value>
            <value>
                <fullName>Opportunity Update</fullName>
            </value>
            <value>
                <fullName>Quote Insert</fullName>
            </value>
            <value>
                <fullName>Quote Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>